# ai_project_25

./: notes.md
analyzer/: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
analyzer/src/config/: llm_config.py  prompts.py
analyzer/src/schemas/: __init__.py  llm_response_models.py  response_models.py
analyzer/src/utils/: analyzer.py  utils.py
csv-ai-final/: .dockerignore  Dockerfile  README.md  csv_agent.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
csv-ai-final/src/: __init__.py  agent.py  csv_analyzer.py  models.py  tools.py
doc-classify/: .env.template  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
doc-classify/src/: config.py  schemas.py
image-data-extractor/: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  init-mongo.js  main.py  requirements.txt
image-data-extractor/src/db/: connection.py  models.py
image-data-extractor/src/extractors/: classifier.py
image-data-extractor/src/utils/: schema_operations.py
sentiment/: .env.template  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
sentiment/src/config/: prompts.py
sentiment/src/schemas/: __init__.py  llm_response_models.py  response_models.py
sentiment/src/utils/: sentiment.py
summarizer/: .env.template  Dockerfile  README.md  docker-compose.yml  main.py
summarizer/src/config/: prompts.py
summarizer/src/schemas/: __init__.py  (+2 more)
ui/: .env.template  Dockerfile  docker-compose.yml  main.py  requirements.txt
ui/.streamlit/: config.toml
(+1 files in other folders)
